cmake_minimum_required(VERSION 3.29)
project(Luogu)

set(CMAKE_CXX_STANDARD 20)

add_executable(Luogu main.cpp
        Problems/P1000.cpp
        Problems/P1000.h
        Problems/P1001.cpp
        Problems/P1001.h
        Problems/P1002.cpp
        Problems/P1002.h
        Problems/P1003.cpp
        Problems/P1003.h
        Problems/P1004.cpp
        Problems/P1004.h)
